--- a/Updatesite/de.itemis.jee.kepler.product/pom.xml
+++ b/Updatesite/de.itemis.jee.kepler.product/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>de.itemis.jee</groupId>
 		<artifactId>de.itemis.jee.releng</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../../Updatesite/de.itemis.jee.releng/pom.xml</relativePath>
+		<relativePath>../de.itemis.jee.releng/pom.xml</relativePath>
 	</parent>
 
 	<artifactId>de.itemis.jee6.product</artifactId>
