--- a/JEE7/de.itemis.jee7.ui/build.xml
+++ b/JEE7/de.itemis.jee7.ui/build.xml
@@ -46,18 +46,23 @@
 	<!-- ==================================================== -->
 	
 	<target name="-version">
+		<tstamp>
+			<format property="current.time" pattern="yyyyMMddhhmmss" />
+		</tstamp>
 		<loadproperties srcfile="${manifest}">
 			<filterchain>
 				<linecontains>
 					<contains value="Bundle-Version" />
 				</linecontains>
 				<tokenfilter>
-					<replaceregex pattern="^Bundle-Version: d*.d*.d*s*$" replace="" />
+					<replaceregex pattern="^Bundle-Version: d*.d*.d*.s*$" replace=""/>
+					<replaceregex pattern="qualifier" replace="${current.time}"/>
 				</tokenfilter>
 			</filterchain>
 		</loadproperties>
 		<property name="plugin" value="${plugin-name}${Bundle-Version}.jar"/>
 		<echo message="Version: ${Bundle-Version}"/>
+		<echo message="Bundle:  ${plugin}"/>
 	</target>
 
 	<target name="clean" depends="-version">
