--- a/JEE7/org.jeegen.jee7.util/pom.xml
+++ b/JEE7/org.jeegen.jee7.util/pom.xml
@@ -33,8 +33,8 @@
 	</licenses>
 
 	<scm>
-		<connection>https://github.com/stmork/jeegen</connection>
-		<developerConnection>https://github.com/stmork</developerConnection>
+		<connection>scm:https://github.com/stmork/jeegen</connection>
+		<developerConnection>scm:https://github.com/stmork</developerConnection>
 		<url>https://github.com/stmork/jeegen/tree/master/JEE7/org.jeegen.jee7.util</url>
 		<tag>JEE</tag>
 	</scm>
@@ -107,16 +107,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
-				<version>3.5.1</version>
-				<configuration>
-					<reportPlugins>
-						<plugin>
-							<groupId>org.codehaus.mojo</groupId>
-							<artifactId>findbugs-maven-plugin</artifactId>
-							<version>3.0.3</version>
-						</plugin>
-					</reportPlugins>
-				</configuration>
+				<version>3.9.1</version>
 			</plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
@@ -143,10 +134,20 @@
 			<extension>
 				<groupId>org.apache.maven.wagon</groupId>
 				<artifactId>wagon-ssh</artifactId>
-				<version>2.8</version>
+				<version>3.4.1</version>
 			</extension>
 		</extensions>
 	</build>
+
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>findbugs-maven-plugin</artifactId>
+				<version>3.0.3</version>
+			</plugin>
+		</plugins>
+	</reporting>
 
 	<dependencies>
 		<dependency>
