--- a/Updatesite/org.jeegen.releng/pom.xml
+++ b/Updatesite/org.jeegen.releng/pom.xml
@@ -10,11 +10,11 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<tycho-version>0.24.0</tycho-version>
-		<tycho-extras-version>0.24.0</tycho-extras-version>
+		<tycho-version>0.26.0</tycho-version>
+		<tycho-extras-version>0.26.0</tycho-extras-version>
 		<antrun-version>1.8</antrun-version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<eclipse.distro>luna</eclipse.distro>
+		<eclipse.distro>oxygen</eclipse.distro>
 		<source.update.site>http://www.jee-generator.org/updates/release/</source.update.site>
 	</properties>
 
@@ -30,6 +30,7 @@
 
 	<build>
 		<plugins>
+
 <!--
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -89,8 +90,8 @@
 					<version>${tycho-version}</version>
 					<configuration>
 						<encoding>${project.build.sourceEncoding}</encoding>
-						<source>7.0</source>
-						<target>7.0</target>
+						<source>1.7</source>
+						<target>1.7</target>
 					</configuration>
 				</plugin>
 
@@ -106,7 +107,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-clean-plugin</artifactId>
-					<version>2.4.1</version>
+					<version>3.1.0</version>
 				</plugin>
 
 				<plugin>
@@ -218,14 +219,6 @@
 			<layout>p2</layout>
 			<url>http://download.eclipse.org/releases/${eclipse.distro}</url>
 		</repository>
-
-<!--
-		<repository>
-			<id>xtext</id>
-			<layout>p2</layout>
-			<url>http://download.eclipse.org/modeling/tmf/xtext/updates/composite/releases/</url>
-		</repository>
--->
 
 		<repository>
 			<id>codehaus-snapshots</id>
